--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <button class="playerX">Player (X)</button>
                 <button class="playerO">Player (O)</button>
             </div>
-            <div class="credit">Created By Me
+            <div class="credit">Created By <a href="#">Me<a>
             </div>
         </div>
     </div>
