--- a/index.html
+++ b/index.html
@@ -7,15 +7,6 @@
     <title>Tic Tac Toe Game</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-360SKWZ2GP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-360SKWZ2GP');
-</script>
 </head>
 
 <body>
@@ -68,6 +59,16 @@
     </div>
 
     <script src="script.js"></script>
+              
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-360SKWZ2GP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-360SKWZ2GP');
+    </script>
 
 </body>
 
