added google optimize script

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html lang="en">
 
 <head>
+    <!-- Google Optimize Script -->
+    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-MKP64GD"></script>
+    
     <meta charset="UTF-8">
     <title>Tic Tac Toe Game</title>
     <link rel="stylesheet" href="style.css">
