--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <title>Tic Tac Toe Game</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-</>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+</head>
 
 <body>
     <!-- select box -->
